# gtk3-calculator

./: README.md  build.script  run.script
src/: CMakeLists.txt  main.c
ui/: #page.ui#  page.ui~  style.css
